*Empty MediaWiki Message*

--- a/عبدالباري_حيرت.mw
+++ b/عبدالباري_حيرت.mw
@@ -1,9 +1,15 @@
-<font face="Tahoma">
-ښاغلى عبدالباري حيرت د حيات الله كاكړ زوى پر1356لمريزكال د زابل ولايت په "دارې"كلي كې زېږېدلى دى ،د جګړو تور ښامار كډوالۍ ته اړويست، په كډوالۍ كې يې تر اتم ټولګي پورې د لورلايي په "زنګيواله" كې زده كړه وكړه.
-پر1376ل. له "ګورنمنټ ډګري كالج" څخه ددوولسم ټولګي په برياليو زده كوونكو كې و،پر همدې كال د كانكور تر ازموينې وروسته كندهار پوهنتون ته بريالى شو او اوس د كندهار پوهنتون د طب پوهنځي ددرېيم كال محصل دى ،له پنځو كلونو راپه دېخوا شعرونه ليكي.حيرت د خپل شعري پر مخيون په بري كې د"پښتو ادبي جرګې " مشر خير محمد عارف ډېرې هڅونې ستايي، چې دده په اند ډېر څه يې ترې زده كړي دي.
+ښاغلى '''عبدالباري حيرت''' د حيات الله كاكړ زوى پر ۱۳۵۶ ل كال [[د زابل ولايت]] په "دارې" كلي كې زېږېدلى دى.
+
+== زده کړې ==
+د جګړو تور ښامار كډوالۍ ته اړويست، په كډوالۍ كې يې تر اتم ټولګي پورې د لورلايي په "زنګيواله" كې زده كړه وكړه.
+پر1376ل. له "ګورنمنټ ډګري كالج" څخه ددوولسم ټولګي په برياليو زده كوونكو كې و،پر همدې كال د كانكور تر ازموينې وروسته كندهار پوهنتون ته بريالى شو او اوس د كندهار پوهنتون د طب پوهنځي ددرېيم كال محصل دى.
+
+
+== ادبي ژوند ==
+له پنځو كلونو راپه دېخوا شعرونه ليكي.حيرت د خپل شعري پر مخيون په بري كې د"پښتو ادبي جرګې " مشر خير محمد عارف ډېرې هڅونې ستايي، چې دده په اند ډېر څه يې ترې زده كړي دي.
 شعري بيان يې ساده او عاطفي دى، كه يې ډېر څه ولوستل د راتلونكي لپاره دډېرو ښو هنري پنځونو لپاره به د پياوړي مگټ څښتن شي، كه د وزن او څپو په برخه كې يې هم له لږ څه غور څخه كار واخيست شعري بيان به يې لا ښكلى شي، د نويو غورو شعري ټولګو لوستل هم په دې كار كې ورسره مرسته كولاى شي. د كندهار پوهنتون فرهنګي څانګې په مياشتنيو غونډو كې هم ګډون كوي، همدا راز كله كله كندهار ادبي ټولنې ته هم ورځي او خپله ادبي تنده په كې ماتوي، د پوهنتون د درسونو تر څنګ ادبي او فرهنګي هڅې روانې ساتي.
 
-== شعرونه ==
+== د شعر يوه بېلګه ==
 
 '''سترګې'''
 په خوب ليدلي ما د ګران سترګې دي
@@ -24,92 +30,4 @@
 ''1376 ل.لورلايي''
 
 
-'''لپه'''
-
-
-پر ټولو دا يوه ده، چې ته هم ژاړې زه هم
-نوځكه داخوږه ده، چې ته هم ژاړې زه هم
-
-ګيله څه په كار نه ده، اوس له خپلو له پرديو 
-دنيا كږه وږه ده، چې ته هم ژاړې زه هم
-
-ستا چم سور او زرغون شو،زما جونګړه شوه لوګۍ 
-عجيبه ننداره ده، چې ته هم ژاړې زه هم
-
-د تمې لپې نه شته، د سرونو تجارت دى
-ددوى دا فيصله ده، چې ته هم ژاړې زه هم
-
-زړګيه يوه ورځ خو د حيرت په رضا راشه
-ژوند كله يوه شپه ده، چې ته هم ژاړې زه هم.
-
-''1377 لمريز''
- 
-'''مړى'''
-
-دخپل عشق په لمبو سوى مړى پروت دى
-د اجل انتظار وړى مړى پروت دى
-
-بيا د غم ستړې شپېلۍ ورته په شور كړئ
-داد عشق تورو ځپلى مړى پروت دى
-
-مينه لاړه دوى هم نورو ته تكيه شول
-هغه مست د وجدان كلى مړى پروت دى
-
-سرې منګولې غبرګې ښكاري د يار خوا ته
-د دېوال سيوري ته تللى مړى پروت دى
-
-خود به تل داسې حيرت په غم كې ښكېل وي
-بخت يې څنګ ته لكه ستړى مړى پروت دى.
-
-''
-1379/غويى/30 ل.دويمه ناحيه ،كندهار''
-
-'''لاهو'''
-
-يمه حيران چې زه خپل ځان لاهو كړم
-
-دا ټول ګرېوان، كه ټول جهان لاهو كړم؟
-
-كه د ډېوې اوښكې كړي وچې سبا
-
-نن به زه هغه پتنګان لاهو كړم
-
-چې يې ايستلى وم د پام له كوره 
-
-هغه د عمر په زندان لا هو كړم
-
-كه د پښتو قلم په ګوتو راشي
-
-زه به د وخت ټول جابران لاهو كړم
-
-په ټول ژوندون مې د خوب خيال نه درلود
-
-حيرته تا غوندې انسان لا هو كړم.
-
-
-'''هنداره'''
-
-
-په سمولو ستا د څڼو او كمڅو يمه زه
-
-كابله ستا پر سينه بيا په ګډېدو يمه زه
-
-زه چې په سپينو جامو نغښتى وم تا خپل ګڼلم
-
-نن په ساده جامو كې ولې د پردو يمه زه
-
-ددومره وخت په تېرېدو سره سمسور نه شوې ته
-
-بخته ظالمه تل له تا په اسوېلو يمه زه
-
-هغه هنداره يم چې څوك راكې څېرې لټوي
-
-بدرنګي ډېره شوه اشنا په ما تېدو يمه زه
-
-هېواده ! ستا د خپلواكۍ لاره له كومه كړمه
-
-پر دغو ډېرو كږلېچو په وركېدو يمه زه.
-
-
-''منبع: د ارغند د څپو ژبه''
-[[Category: پښتانه شاعران]]
+[[وېشنيزه: پښتانه شاعران]]
