--- a/ژبه.mw
+++ b/ژبه.mw
@@ -43,9 +43,11 @@
 (4) په پښتوكښې هم ځينې كلمې لكه دكارغۀ كلمه د كارغه له غږ( كاغ، كاغ) نه، دچوڼ چوڼې كلمه دچوڼ چوڼې له غږ( چوڼ، چوڼ) نه، دكوړكې كلمه دچرګې له غږ( كوړت، كوړټ) نه، دغوا كلمه دغوا له غږ( باا، امبا)نه او بنګېدلو كلمه  دمچ له غږ(بنګ،بنګ) نه  رامنځته شوې ښكاري
 
 
-[[باندنۍ تړنې]]
 
-<http://www.bloguna.com/andur/view/119>
+== باندنۍ تړنې ==
+
+
+[http://www.bloguna.com/andur/view/119]
 
 [[af:Taal]]
 [[als:Sprache]]
