robot  Modifying: [[mzn:Isläm]]

--- a/اسلام.mw
+++ b/اسلام.mw
@@ -898,7 +898,7 @@ Islamic law divides non-Muslims into several categories, depending on their rela
 [[mr:इस्लाम धर्म]]
 [[ms:Islam]]
 [[mt:Islam]]
-[[mzn:İzlam / ایسلام]]
+[[mzn:Isläm]]
 [[nds:Islam]]
 [[nds-nl:Islam]]
 [[nl:Islam]]
