*Empty MediaWiki Message*

--- a/علي_بن_ابي_طالب.mw
+++ b/علي_بن_ابي_طالب.mw
@@ -54,10 +54,68 @@
 ۳-حضرت علي رضي الله عنه ته درسول الله صلى الله عليه وسلم دځومتوب وياړ ورپه برخه شو . 
 ۴- حضرت علي رضي الله عنه ته دترټولو لومړي ايمان راوړونكي ماشوم وياړ ورپه برخه دى . 
 
-== دحضرت علي رضي الله عنه دشهادت پيښه ==
+== د شهادت پيښه ==
 د هجرت په ۴۰ كال دخوارجو دباطلې ټولۍ له لورې د كورنيو جګړو او دهغوی دلاملونودجاج اخيستلو په اړه دحج په موسم كې خبرې اترې پيل شوې , دخبرو په ترڅ كې په يوه خله دا ومنل شوه چې ددې پيښو لاملونه يواځې درې كسان حضرت علي رضي الله عنه , حضرت عمرو بن العاص رضي الله عنه او حضرت امير معاويه رضي الله عنه دي . 
 دخبرو په پای كې يې وويل چې د دې پيښو يواځينى حل د نوموړو دريو كسانو شهيدانول دي ,ځكه نو دريو كسانو عبدالرحمن بن ملجم دحضرت علي رضي الله عنه ,نزال دحضرت امير معاويه رضي الله عنه او عبدالله نامي تن بيا دحضرت عمرو بن العاص رضي الله عنه دشهيدولو دروند پيټي په خپلو ځانونو كيښودل .او د دې شومو موخو دتر سره كولو لپاره روان شول . 
 كوفې ته په رسيدو سره ابن ملجم له يوې پيمخي قطام نومې ميرمنې سره مخامخ شو او دخپلې موخې په اړه يې توضيحات وركړل دې بدبختې ميرمنې نه يواځې داچې دابن ملجم دناوړي كار تاييد يې وكړ بلكه د دې كارپه برياليتوب سره دپای ته رسيدو په صورت كې يې دنكاح كولو ژمنه هم ورسره وكړه . 
 لنډه داچې دې دريو واړو كسانو دهجرت په ۴۰ كال د روژې په مياشت كې دسهار په مهال په دريو صحابه وباندې بريد وكړ ,حضرت امير معاويه رضي الله عنه د تورې دنه لګيدو له امله ,حضرت عمرو بن العاص رضي الله عنه امامت ته دنه تلو له امله روغ پاتې شول او هغه تن چې دحضرت عمرو بن العاص رضي الله عنه په ځای امامت ته تللى وو دخوارجو دتيروتنې له كبله په شهادت ورسيد. 
 خو دالهي قضا له مخې داميرالمؤمنيين حضرت علي رضي الله عنه دژوند نيټه نوره په پوره كيدو وه ,كله چې هغه لمانځه ته راغى نو ابن ملجم چې په مسجد كې ويده وو يې دلمانځه داداكولو په نيت راويښ كړ.او پخپله دلمانځه داداكولو په نيت ابن ملجم چې كله حضرت علي رضي الله عنه دسجدې په حالت كې وليدنو په هغه يې د تورې سخت ګزار وكړ ,توره دحضرت علي رضي الله عنه په سر مبارك كې خښه شوه او حضرت علي رضي الله عنه سخت زخمي شو . 
 كه له يوې خوا دتورې وارونه ډير ژور وو نو له بلې خوا دابن ملجم توره په زهرو هم ككړه وه او دزهرو اغيزې په ډيره چټكتيا سره دحضرت علي رضي الله عنه په ټول بدن كې وغزيدلې چې له امله يې داسلام دغه څلورم ځليدونكى ستورى حضرت امام حسين رضي الله عنه ته دڅه نصيحت له كولو وروسته دهجرت په ۴۰ كال دروژې په شلمه نيټه دجمعې په مباركې شپې دشهادت لوړ مقام ته ورسيد .انا لله وانا اليه راجعون
+
+
+[[an:Alí]]
+[[ang:Alī]]
+[[az:Əli ibn Əbu Talib]]
+[[be-x-old:Алі]]
+[[bg:Али ибн Абу Талиб]]
+[[bn:আলী ইবন আবী তালিব]]
+[[bs:Alija ibn Ebu-Talib]]
+[[ca:Alí ibn Abi-Tàlib]]
+[[cs:Alí]]
+[[da:Ali]]
+[[de:Ali ibn Abi Talib]]
+[[diq:Hz. Eli]]
+[[dv:ޢަލީގެފާނު]]
+[[en:Ali]]
+[[eo:Ali ibn Abi Talib]]
+[[es:Ali Ibn Abi Talib]]
+[[et:‘Alī ibn Abī Ţālib]]
+[[fa:علی]]
+[[fi:Ali ibn Abi Talib]]
+[[fr:ʿAlī ibn Abī T̩ālib]]
+[[gl:Ali ibn Abi Talib]]
+[[he:עלי בן אבי טאלב]]
+[[hr:Ali]]
+[[hu:Ali kalifa]]
+[[id:Ali bin Abi Thalib]]
+[[is:Alí ibn Abu Talib]]
+[[it:Ali ibn Abi Talib]]
+[[ja:アリー・イブン・アビー＝ターリブ]]
+[[ko:알리 이븐 아비 탈리브]]
+[[ml:അലി ബിന്‍ അബീ ത്വാലിബ്‌]]
+[[ms:Ali bin Abi Talib]]
+[[nl:Ali ibn Abu Talib]]
+[[nn:Ali ibn Abi Talib]]
+[[no:Ali ibn Abi Talib]]
+
+[[ps:ابو الحسن علي بن ابي طالب]]
+[[pl:Ali ibn Abi Talib]]
+[[pt:Ali ibn Abi Talib]]
+[[ro:Ali]]
+[[ru:Али ибн Абу Талиб]]
+[[sd:علي]]
+[[sh:Alija]]
+[[simple:Ali]]
+[[sq:Ali Ibn Ebi Talib]]
+[[sr:Алија]]
+[[sv:Ali ibn Abi Talib]]
+[[sw:Ali ibn Abu Talib]]
+[[ta:அலீ (ரலி)]]
+[[th:อะลีย์]]
+[[tr:Ali bin Ebu Talib]]
+[[udm:Али ибн Аби Талиб]]
+[[uk:Алі ібн Абі Таліб]]
+[[ur:حضرت علی کرم اللہ وجہہ]]
+[[vi:Ali bin Abu Talib]]
+[[wa:Ali (calife)]]
+[[zh:阿里·伊本·艾比·塔利卜]]
