/* حضرت علي رضي الله عنه په لاندې غزاوو كې ګډون كړى وو */

--- a/علي_بن_ابي_طالب.mw
+++ b/علي_بن_ابي_طالب.mw
@@ -39,14 +39,14 @@
 حضرت امام حسن رضي الله عنه ,حضرت امام حسين رضي الله عنه , حضرت محمد بن حنفيه رضي الله عنه , او عمر رضي الله عنه . 
 
 
-== حضرت علي رضي الله عنه په لاندې غزاوو كې ګډون كړى وو ==
+== په غزاوو كې ګډون ==
 د بدر وتلې غزا ,داحد وتلې غزا ,دهجرت په ۵كال كې دبنو نضيرو په جلاوطنۍ كې هم حضرت علي رضي الله عنه ګډون درلود,په ۵ هجري كال كې دخندق په وتلې غزا كې هم دكفارو مشر عمرو بن عبدود هم دحضرت علي رضي الله په لاس دوزخ ته وليږل شو , دخندق له پيښې وروسته بنو قريضه و دمسلمانانو په خلاف دقريشو مرسته كړې وه او له مسلمانانو سره شوى تړون يې مات كړځكه نو له هغوی سره دجګړې كولو په موخه يې حضرت علي رضي الله عنه دمسلمانانو مشر وټاكه او هغه درسول الله صلى الله عليه وسلم په امر دكفارو كلا ونيوله او دمازديګر لمونځ يې هم پكې ادا كړ . 
 دهجرت په ۶ كال رسول الله صلى الله عليه وسلم ته څرګنده شوه چې بنو سعد دخيبر ديهودو دمرستې لپاره يوځای شوي ځكه يې نو حضرت علي رضي الله عنه دسلو كسانو مجاهدينو سره دهغوی دمقابلې لپاره واستاوه اوحضرت علي رضي الله عنه دشعبان په مياشت كې په بنو سعدو بريد وكړ او له هغوی څخه يې ۵۰۰ اوښان او ۲۰۰ وُزې په غنيمت ونيولې . 
 په همدې كال رسول الله صلى الله عليه وسلم له ۱۴۰۰۰ صحابۀ كرامو رضوان الله تعالى عليهم اجمعين سره يوځای دكعبې شريفي دزيارت كولو لپاره ولاړ, كله چې حديبيي نومې ځای ته ورسيدل نو مشركينو جګړه كول غوښتل خو درسول الله صلى الله عليه وسلم موخه جنګ كول نه وو ځكه يې حضرت عباس رضي الله عنه دسفير په توګه هلته ورواستاوه ,دلته داخبره مشهوره شوه چې حضرت عثمان رضي الله عنه شهيد كړى شوى نو رسول الله صلى الله عليه وسلم دهغه دكسات اخيستلو له كبله له صحابۀ كرامو څخه بيعت واخيست پدې بيعت وركولو كې حضرت علي رضي الله عنه هم ګډون درلود او دسولې پاڼه هم دحضرت علي رضي الله عنه په ګوتو وليكل شوه . 
 دخيبر په سيمه كې دكفارو ډيرې مضبوطې كلاوې او مركزونه موجودوو ,چې په فتح كولو يې حضرت ابوبكر صديق او حضرت عمر فاروق رضي الله عنهما زور وواهه خو بريالي نه شول ,يوه ورځ رسول الله صلى الله عليه وسلم وفرمايل چې سبا به زه دجګړې بيرغ دداسې چا په لاس وركوم چې هغه خدای جل جلاله او رسول الله صلى الله عليه وسلم ته خورا محبوب دى كله چې سهار شو نو رسول الله صلى الله عليه وسلم بيرغ دحضرت علي رضي الله عنه په لاس كې وركړ هغه دسترګو د ناروغي درلوده، رسول الله صلى الله عليه وسلم خپلي لاړې دهغه په سترګو ورومښلې او هغه رك روغ شو او خپله ورسپارل شوې دنده يې مخ پر وړاندي بوتله تردې چې دخيبر سيمه يې فتح او دكفر او شرك اولسونه يې پو پناكړل . 
 دحُنَين په وتلې غزا كې هم حضرت علي رضي الله عنه ډير په ميړانه له دښمن سره وجنګيده . او دهغوی مشر يې په خپل حيدري وار باندې دتل لپاره د دوزخ برغولى وګرځاوه . 
 دهجرت په ۹كال كې چې كله رسول الله صلى الله عليه وسلم تبوك نومې ځای ته دتلو هوډ وكړنو داهل بيتو دساتنې لپاره يې حضرت علي رضي الله عنه په مدينه كې پريښود . 
-دهجرت په لسم كال رسول الله صلى الله عليه وسلم وروستى حج وكړ,حضرت علي رضي الله عنه هم له يمن څخه راغى او په دغه مبارك حج كې يې ګډون وكړ. 
+دهجرت په لسم كال رسول الله صلى الله عليه وسلم وروستى حج وكړ,حضرت علي رضي الله عنه هم له يمن څخه راغى او په دغه مبارك حج كې يې ګډون وكړ.
 
 == دحضرت علي رضي الله عنه ځانګړتياوې ==
 ۱- حضرت علي رضي الله عنه يو له هغو لسو كسانو څخه وو چې درسول الله صلى الله عليه وسلم له لورې ورته دجنت زيرى وركول شوى وو. 
