/* ميرمنې او اولادونه يې */

--- a/علي_بن_ابي_طالب.mw
+++ b/علي_بن_ابي_طالب.mw
@@ -22,7 +22,7 @@
 == دحضرت علي رضي الله عنه حليه ==
 حضرت علي رضي الله عنه غنم رنګى ,دمنځني قد, د غټو غټو سترګو ,ښايسته سپين مخ ,او دبَبَرې پراخې سينې څښتن وو .بدن يې غوښين او ګيډه يې لږ دباندې لور ته راوتلې وه , د سر ويښتان يې نه وو . په يوه روايت كې راځي چې خرييل به يې , او په بل روايت كې راغلي چې له څيلمي يې دسر ويښتان وو نه . ږيره يې لويه او دومره پراخه وه چې له يوې اوږې او بلې اوږې سره به لګيدله ,دعمر په پای كې يې ويښتان خورا سپين شوي وو او په ټول عمر يې يواځې يو ځل خضاب (نكريزي) لګولې وې . 
 
-== ميرمنې او اولادونه يې ==
+== ميرمنې او اولادونه ==
 د جنت دسردارې حضرت فاطمة الزهرا رضي الله عنها له نكاح وروسته يې له يوه نه ډير ودونه كړي وو ,او ډير اولادونه يې زيږيدلي وو تفصيل يې دادى : 
 حضرت فاطمه رضي الله عنهاچي درسول الله صلى الله عليه وسلم دزړه ټكړه وه له هغې څخه يې په هلكانو كي حضرت حسن ,حضرت حسين ,حضرت محسن رضي الله عنهم پيدا شوي وو . او په ښځينه اولادونو كې يې زينب كبرى ,او ام كلثوم كبرى رضي الله عنهما پيدا شوې وې ,محسن په كوچني توب كې مړشو . 
 ام البنين بنت حزام : له دې څخه يې عباس ,جعفر ,عبدالله او عثمان پيداشوي وو, چې له دوی څخه له عباس څخه پرته نور ټول له حضرت امام حسين رضي الله عنه سره په كربلا كې شهيدان شول . 
@@ -36,8 +36,7 @@
 له دې ميرمنو پرته هم دحضرت علي رضي الله عنه نورې مينځې هم وې ,چې له هغوی څخه يې لاندې ښځينه اولادونه شوي :
 ام هانئ , ميمونه , زينب صغرى , رمله صغرى , ام كلثوم صغرى , فاطمه , امامه , خديجه , ام الكرام , ام سلمه ,ام جعفر ,جمانه او نفيسه . 
 لنډه داچې دحضرت علي رضي الله عنه نژدې ۱۷ لوڼي او ۱۴ زامن وو ,په دوی كې يواځې له لاندې څلوروكسانوڅخه دنسب لړۍ روانه شوه : 
-حضرت امام حسن رضي الله عنه ,حضرت امام حسين رضي الله عنه , حضرت محمد بن حنفيه رضي الله عنه , او عمر رضي الله عنه . 
-
+حضرت امام حسن رضي الله عنه ,حضرت امام حسين رضي الله عنه , حضرت محمد بن حنفيه رضي الله عنه , او عمر رضي الله عنه .
 
 == په غزاوو كې ګډون ==
 د بدر وتلې غزا ,داحد وتلې غزا ,دهجرت په ۵كال كې دبنو نضيرو په جلاوطنۍ كې هم حضرت علي رضي الله عنه ګډون درلود,په ۵ هجري كال كې دخندق په وتلې غزا كې هم دكفارو مشر عمرو بن عبدود هم دحضرت علي رضي الله په لاس دوزخ ته وليږل شو , دخندق له پيښې وروسته بنو قريضه و دمسلمانانو په خلاف دقريشو مرسته كړې وه او له مسلمانانو سره شوى تړون يې مات كړځكه نو له هغوی سره دجګړې كولو په موخه يې حضرت علي رضي الله عنه دمسلمانانو مشر وټاكه او هغه درسول الله صلى الله عليه وسلم په امر دكفارو كلا ونيوله او دمازديګر لمونځ يې هم پكې ادا كړ . 
