--- a/علي_بن_ابي_طالب.mw
+++ b/علي_بن_ابي_طالب.mw
@@ -19,8 +19,8 @@
 دهجرت په دوهم كال حضرت علي رضي الله عنه ته درسول الله صلى الله عليه وسلم دځومتوب وياړ ور په برخه شو ,او درسول الله صلى الله عليه وسلم له محبوب ترينې لور سيده فاطمة الزهرا رضي الله عنها سره يې نكاح وشوه .كله چې حضرت علي رضي الله عنه له فاطمة الزهرا رضي الله عنها سره دنكاح تړلو غوښتنه وكړه نو رسول الله صلى الله عليه وسلم حضرت علي رضي الله عنه ته وفرمايل چې ته دمهر اداكولو په بڼه څه شى لرې ؟ 
 حضرت علي رضي الله عنه ورته وفرمايل چې زه له يوه اس اويوې ذرې پرته بل هيڅ شى هم نلرم . رسول الله صلى الله عليه وسلم ورته وفرمايل چې اس خو دجهاد لپاره دى ولاړشه ذره خرڅه كړه ,حضرت علي رضي الله عنه هغه ذره په حضرن عثمان رضي الله عنه په څلور سوه اتيا(۴۸۰) درهمه وپلورله او هغه قيمت يې درسول الله صلى الله عليه وسلم مخې ته كيښود ,رسول الله صلى الله عليه وسلم حضرت بلال رضي الله عنه ته امر وكړ چې له بازاره عطر(خوشبو) راوړي او پخپله رسول الله صلى الله عليه وسلم نكاح وويله او په دواړو (خاوند او ميرمن) يې داوداسه اوبه وشيندلې او دخير او بركت دعا يې ورته وغوښته .زرقاني ۲ټوك ۴ مخ . 
 
-== دحضرت علي رضي الله عنه حليه ==
-حضرت علي رضي الله عنه غنم رنګى ,دمنځني قد, د غټو غټو سترګو ,ښايسته سپين مخ ,او دبَبَرې پراخې سينې څښتن وو .بدن يې غوښين او ګيډه يې لږ دباندې لور ته راوتلې وه , د سر ويښتان يې نه وو . په يوه روايت كې راځي چې خرييل به يې , او په بل روايت كې راغلي چې له څيلمي يې دسر ويښتان وو نه . ږيره يې لويه او دومره پراخه وه چې له يوې اوږې او بلې اوږې سره به لګيدله ,دعمر په پای كې يې ويښتان خورا سپين شوي وو او په ټول عمر يې يواځې يو ځل خضاب (نكريزي) لګولې وې . 
+== بڼه ==
+حضرت علي رضي الله عنه غنم رنګى ,دمنځني قد, د غټو غټو سترګو ,ښايسته سپين مخ ,او دبَبَرې پراخې سينې څښتن وو .بدن يې غوښين او ګيډه يې لږ دباندې لور ته راوتلې وه , د سر ويښتان يې نه وو . په يوه روايت كې راځي چې خرييل به يې , او په بل روايت كې راغلي چې له څيلمي يې دسر ويښتان وو نه . ږيره يې لويه او دومره پراخه وه چې له يوې اوږې او بلې اوږې سره به لګيدله ,دعمر په پای كې يې ويښتان خورا سپين شوي وو او په ټول عمر يې يواځې يو ځل خضاب (نكريزي) لګولې وې .
 
 == ميرمنې او اولادونه ==
 د جنت دسردارې حضرت فاطمة الزهرا رضي الله عنها له نكاح وروسته يې له يوه نه ډير ودونه كړي وو ,او ډير اولادونه يې زيږيدلي وو تفصيل يې دادى : 
