/* له حضرت فاطمې رضي الله عنها سره دحضرت علي رضي الله عنه واده */

--- a/علي_بن_ابي_طالب.mw
+++ b/علي_بن_ابي_طالب.mw
@@ -15,9 +15,9 @@
 څنګه چې حضرت علي رضي الله عنه له داسي خبرو سره نااشنا وو ځكه يې نو رسول الله صلى الله عليه وسلم ته په ځواب كې وويل چې زه به پدې اړه له خپل پلار ابو طالب څخه وپوښتم , خو رسول الله صلى الله عليه وسلم نه غوښتل چې وحدانيت ته درابللو داخبره دې په ناڅاپي توګه په لومړي ځل عام ډګرته ووځي ځكه يې نو حضرت علي رضي الله عنه ته وفرمايل چې :ته پخپله پدې خبر ه فكر وكړه چاته دويلو اړتيا يې نه ليدل كيږي . 
 درسول الله صلى الله عليه وسلم په مجالسو كې دګډون له كبله دحضرت علي رضي الله عنه فطرت ډير پاك وواودتوحيد په اړه فكر كولو كې دخدای جل جلاله توفيق ورسره مل شو هماغه وو چې ډير ژر دنبوة په دربار كې حاضر شو او داسلام په سپيڅلي دين يې ايمان راوړ,او توحيد ته دخلكو رابلل يې خپله ديني كړنلاره وبلله .او پدې ډول يې په ماشومانو كې تر ټولو دلومړي ايمان راوړونكي ماشوم ځانګړتيا تر لاسه كړه . 
 
-== له حضرت فاطمې رضي الله عنها سره دحضرت علي رضي الله عنه واده ==
+== له حضرت فاطمې رضي الله عنها سره واده ==
 دهجرت په دوهم كال حضرت علي رضي الله عنه ته درسول الله صلى الله عليه وسلم دځومتوب وياړ ور په برخه شو ,او درسول الله صلى الله عليه وسلم له محبوب ترينې لور سيده فاطمة الزهرا رضي الله عنها سره يې نكاح وشوه .كله چې حضرت علي رضي الله عنه له فاطمة الزهرا رضي الله عنها سره دنكاح تړلو غوښتنه وكړه نو رسول الله صلى الله عليه وسلم حضرت علي رضي الله عنه ته وفرمايل چې ته دمهر اداكولو په بڼه څه شى لرې ؟ 
-حضرت علي رضي الله عنه ورته وفرمايل چې زه له يوه اس اويوې ذرې پرته بل هيڅ شى هم نلرم . رسول الله صلى الله عليه وسلم ورته وفرمايل چې اس خو دجهاد لپاره دى ولاړشه ذره خرڅه كړه ,حضرت علي رضي الله عنه هغه ذره په حضرن عثمان رضي الله عنه په څلور سوه اتيا(۴۸۰) درهمه وپلورله او هغه قيمت يې درسول الله صلى الله عليه وسلم مخې ته كيښود ,رسول الله صلى الله عليه وسلم حضرت بلال رضي الله عنه ته امر وكړ چې له بازاره عطر(خوشبو) راوړي او پخپله رسول الله صلى الله عليه وسلم نكاح وويله او په دواړو (خاوند او ميرمن) يې داوداسه اوبه وشيندلې او دخير او بركت دعا يې ورته وغوښته .زرقاني ۲ټوك ۴ مخ . 
+حضرت علي رضي الله عنه ورته وفرمايل چې زه له يوه اس اويوې ذرې پرته بل هيڅ شى هم نلرم . رسول الله صلى الله عليه وسلم ورته وفرمايل چې اس خو دجهاد لپاره دى ولاړشه ذره خرڅه كړه ,حضرت علي رضي الله عنه هغه ذره په حضرن عثمان رضي الله عنه په څلور سوه اتيا(۴۸۰) درهمه وپلورله او هغه قيمت يې درسول الله صلى الله عليه وسلم مخې ته كيښود ,رسول الله صلى الله عليه وسلم حضرت بلال رضي الله عنه ته امر وكړ چې له بازاره عطر(خوشبو) راوړي او پخپله رسول الله صلى الله عليه وسلم نكاح وويله او په دواړو (خاوند او ميرمن) يې داوداسه اوبه وشيندلې او دخير او بركت دعا يې ورته وغوښته .زرقاني ۲ټوك ۴ مخ .
 
 == بڼه ==
 حضرت علي رضي الله عنه غنم رنګى ,دمنځني قد, د غټو غټو سترګو ,ښايسته سپين مخ ,او دبَبَرې پراخې سينې څښتن وو .بدن يې غوښين او ګيډه يې لږ دباندې لور ته راوتلې وه , د سر ويښتان يې نه وو . په يوه روايت كې راځي چې خرييل به يې , او په بل روايت كې راغلي چې له څيلمي يې دسر ويښتان وو نه . ږيره يې لويه او دومره پراخه وه چې له يوې اوږې او بلې اوږې سره به لګيدله ,دعمر په پای كې يې ويښتان خورا سپين شوي وو او په ټول عمر يې يواځې يو ځل خضاب (نكريزي) لګولې وې .
