*Empty MediaWiki Message*

--- a/حامد_غورځنگ.mw
+++ b/حامد_غورځنگ.mw
@@ -1,5 +1,4 @@
-<font face="Tahoma">
-حامد غورځنګ د محمد بصير حميدي ځوۍ دۍ چې نن نه پوره ۱۹ کاله وړاندې په ۱۳۶۷ لمريز  كې  زوکړى دى نوموړى دمګړۍ ته د جلال اباد په شاه مردخان مېنه کې اوسي.
+'''حامد غورځنګ''' د محمد بصير حميدي ځوۍ دۍ چې نن نه پوره ۱۹ کاله وړاندې په ۱۳۶۷ لمريز  كې  زوکړى دى نوموړى دمګړۍ ته د جلال اباد په شاه مردخان مېنه کې اوسي.
 
 دى ۷ کلن وو چې د ښوونځي ور يې وټکولو او په ۱۳۸۵ لمريز کال له مياعمر عالي لېسې بريالى را وواته.
 شاعري يي که څه هم لکه د پښتون کهول په خټه کې آغګلې وه خو په ۱۳۸۲ لمريز کال يې د کاغذ مخ د شعر په نوم تور کړ.
@@ -9,7 +8,7 @@
 غورځنګ چاپ اثار نه لري.
 
 
-== دا يې د شعر څو بېلګې ==
+== د شعر يوه بېلګه ==
 
 *دا به ضرور واورې ناځوانه! لېونى به شمه
 *له ځان مې مه شړه جانانه! لېونى به شمه
