robot  Adding: [[sah:Владимир Путин]] Modifying: [[ka:ვლადიმერ პუტინი]], [[ku:Vladîmîr Putîn]]

--- a/ولادمیر_پوتین.mw
+++ b/ولادمیر_پوتین.mw
@@ -200,10 +200,10 @@ Kukly showed not only Russian president, but his colleagues as well..-->
 [[it:Vladimir Vladimirovič Putin]]
 [[ja:ウラジーミル・プーチン]]
 [[jv:Vladimir Putin]]
-[[ka:ვლადიმირ პუტინი]]
+[[ka:ვლადიმერ პუტინი]]
 [[kk:Путин, Владимир Владимирович]]
 [[ko:블라디미르 푸틴]]
-[[ku:Vladimir Putin]]
+[[ku:Vladîmîr Putîn]]
 [[la:Vladimirus Putin]]
 [[lad:Vladimir Putin]]
 [[lb:Wladimir Wladimirowitsch Putin]]
@@ -227,6 +227,7 @@ Kukly showed not only Russian president, but his colleagues as well..-->
 [[ro:Vladimir Putin]]
 [[ru:Путин, Владимир Владимирович]]
 [[sa:व्लाडिमिर पुटिन]]
+[[sah:Владимир Путин]]
 [[scn:Vladimir Putin]]
 [[se:Vladimir Putin]]
 [[sh:Vladimir Putin]]
