robot  Modifying: [[ca:Gandhara]]

--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -234,7 +234,7 @@ Image:GandharaFrieze.JPG|Hellenistic scene, Gandhara, 1st century
 [[Category:Civilizations]]
 [[Category:د پاکښتان لرغوني سیمې]]
 
-[[ca:Gandara]]
+[[ca:Gandhara]]
 [[cs:Gandhára]]
 [[de:Gandhara]]
 [[en:Gandhara]]
