robot  Modifying: [[fr:Al-Kindi]]

--- a/يعقوب_کندي.mw
+++ b/يعقوب_کندي.mw
@@ -68,7 +68,7 @@
 [[et:Abū al-Kindī]]
 [[fa:ابویوسف کندی]]
 [[fi:Al-Kindi]]
-[[fr:Al-Kindi (philosophe)]]
+[[fr:Al-Kindi]]
 [[gl:Al-Kindi]]
 [[hr:Al Kindi]]
 [[hu:Kindí]]
