فارسی سازی ارقام

--- a/انټر_سرويس_انټېلېجنس.mw
+++ b/انټر_سرويس_انټېلېجنس.mw
@@ -146,20 +146,20 @@ After the initial phase, the recruit is sent to the Inter-Services Intelligence 
 
 ===د عملياتو تاريخ===
 ====افغانستان====
-*'''(1982)''' دا آی اېس آی، سي آی اې او موساد څارګرې ډلې وې چې د فلسطين د آزادۍ تنظيم لپاره د سوويت جوړې شوې، لبنانۍ وسلې چې په ۱۹۸۲ کې د لبنان د نيولو وروسته اسراييلو لاس ته ورغلې او وروسته يې په يوه پټ او خفيه عملياتو کې همدا وسلې پاکستان ته ولېږدولې، چې بيا د پاکستان لخوا افغانستان ته ولېږل شوې او د افغان او روس په جګړو کې د مجاهدينو لخوا وکارېدې. تر دې وروستيو کالونو پورې د دغو وسلو د لېږدېدو په اړه ټول مالومات د يوه راز په توګه پټ ساتل کېدل.
+*'''(۱۹۸۲)''' دا آی اېس آی، سي آی اې او موساد څارګرې ډلې وې چې د فلسطين د آزادۍ تنظيم لپاره د سوويت جوړې شوې، لبنانۍ وسلې چې په ۱۹۸۲ کې د لبنان د نيولو وروسته اسراييلو لاس ته ورغلې او وروسته يې په يوه پټ او خفيه عملياتو کې همدا وسلې پاکستان ته ولېږدولې، چې بيا د پاکستان لخوا افغانستان ته ولېږل شوې او د افغان او روس په جګړو کې د مجاهدينو لخوا وکارېدې. تر دې وروستيو کالونو پورې د دغو وسلو د لېږدېدو په اړه ټول مالومات د يوه راز په توګه پټ ساتل کېدل.
 [[انځور:General Akhtar abdur rahman.jpg|px200|کيڼ|thumb|د آی اېس آی مشر، [[اختر عبدالرحمن]] چې د روسانو پر وړاندې د افغان جهاد بنسټګر ګڼل کېږي.]]
 
-*'''(1982-1997)''' ISI played a central role in the U.S.-backed guerrilla war to oust the Soviet Army from Afghanistan in the 1980s. That Central Intelligence Agency (CIA)-backed effort flooded Pakistan with weapons and with Afghan, Pakistani and Arab "mujahideen", who were motivated to fight as a united force protecting fellow Muslims in Soviet occupied Afghanistan. The CIA relied on the ISI to train fighters, distribute arms, and channel money. The ISI trained about 83,000 Afghan mujahideen between 1983 and 1997, and dispatched them to Afghanistan. B. Raman of the [[South Asia Analysis Group]], an Indian think-tank, claims that the [[Central Intelligence Agency]] through the ISI promoted the smuggling of heroin into Afghanistan in order to turn the Soviet troops into heroin addicts and thus greatly reducing their fighting potential.<ref name="South Asia Analysis Group ">{{cite web| url=http://www.acsa.net/isi/index.html| title=PAKISTAN'S INTER-SERVICES INTELLIGENCE (ISI)| accessdate=2006-05-05| first=B| last=Raman}}</ref>  See also [[CIA drug trafficking#Soviet Afghanistan]], [[CIA transnational anti-crime and anti-drug activities#Southwest Asia]], [[Operation Cyclone]], [[Badaber Uprising]].
+*'''(۱۹۸۲-۱۹۹۷)''' ISI played a central role in the U.S.-backed guerrilla war to oust the Soviet Army from Afghanistan in the ۱۹۸۰s. That Central Intelligence Agency (CIA)-backed effort flooded Pakistan with weapons and with Afghan, Pakistani and Arab "mujahideen", who were motivated to fight as a united force protecting fellow Muslims in Soviet occupied Afghanistan. The CIA relied on the ISI to train fighters, distribute arms, and channel money. The ISI trained about ۸۳٬۰۰۰ Afghan mujahideen between ۱۹۸۳ and ۱۹۹۷, and dispatched them to Afghanistan. B. Raman of the [[South Asia Analysis Group]], an Indian think-tank, claims that the [[Central Intelligence Agency]] through the ISI promoted the smuggling of heroin into Afghanistan in order to turn the Soviet troops into heroin addicts and thus greatly reducing their fighting potential.<ref name="South Asia Analysis Group ">{{cite web| url=http://www.acsa.net/isi/index.html| title=PAKISTAN'S INTER-SERVICES INTELLIGENCE (ISI)| accessdate=۲۰۰۶-۰۵-۰۵| first=B| last=Raman}}</ref>  See also [[CIA drug trafficking#Soviet Afghanistan]], [[CIA transnational anti-crime and anti-drug activities#Southwest Asia]], [[Operation Cyclone]], [[Badaber Uprising]].
 
-*'''(1986)''' کله چې د روس او افغان په جګړه کې د افغانستان ګڼ شمېر خلک پاکستان ته د مهاجرو په توګه لاړل، نو د مهاجرينو دغې لويې شمېرې آی اېس آی هم اندېښمن کړ او داسې يې انګېرله چې که چېرته د خاد غړي هم په دغو مهاجرينو کې پاکستان ته راغلي وي نو دا به د پاکستان ګټو ته زيانمن وي، نو په همدې خاطر آی اېس آی د انګرېزانو او د سي آی اې په هڅونه په پاکستان کې د افغان سفارت استازي احمد منصور ته په کال ۱۹۸۶ کې لندن ته د تګ ژمنه ورکړه، خو په دې آړ چې احمد منصور به د خاد ټول غړي چې په پاکستان کې د افغان سفارت له خوا سمبالېږي، پاکستان یا هم سي آی اې ته په لاس ورکوي . د دې ترڅنګ به احمد منصور هغه د اړیکو نیولو اسناد پاکستان ته ورکي چې د افغانستان د حکومت او ځېنو مجاهېد مشرانو او همدارنګه هغه افغان روڼ اڼدانو چې د افغان ناورین لپاره یې یوه سوله اییزه لاره لټوله. په همدې توګه منصور احمد د آی اېس آی وړانديز ته غاړه کېښودله او په پاکستان کې افغان حکومت د ايجنټانو په اړه د ارزښتمنو پټو مالوماتو په بدل کې، هغه د خپلې کورنۍ د ټولو غړو سره په پټه توګه د استوګنې د ځای نه ووېستل شول چې بيا د برټش ايروېز په آلوتنه کې په خوندي توګه تر لندنه ورسول شول. د هغه وخت افغاني ډيپلوماټانو او د شوروي اتحاد چارواکو ډېر ځل خپل کوششونه وکړل چې منصور احمد او د هغه کورنۍ پېدا کړي خو د هغوی هر کوشش ناکامه و.<ref name="Profiles of Intelligence">{{cite book | author=Brigadier Syed A. I. Tirmazi | title=Profiles of Intelligence | publisher=Combined Printers | year=1985 | id=Library of Congress Catalogue No. 95-930455}}</ref> 
+*'''(۱۹۸۶)''' کله چې د روس او افغان په جګړه کې د افغانستان ګڼ شمېر خلک پاکستان ته د مهاجرو په توګه لاړل، نو د مهاجرينو دغې لويې شمېرې آی اېس آی هم اندېښمن کړ او داسې يې انګېرله چې که چېرته د خاد غړي هم په دغو مهاجرينو کې پاکستان ته راغلي وي نو دا به د پاکستان ګټو ته زيانمن وي، نو په همدې خاطر آی اېس آی د انګرېزانو او د سي آی اې په هڅونه په پاکستان کې د افغان سفارت استازي احمد منصور ته په کال ۱۹۸۶ کې لندن ته د تګ ژمنه ورکړه، خو په دې آړ چې احمد منصور به د خاد ټول غړي چې په پاکستان کې د افغان سفارت له خوا سمبالېږي، پاکستان یا هم سي آی اې ته په لاس ورکوي . د دې ترڅنګ به احمد منصور هغه د اړیکو نیولو اسناد پاکستان ته ورکي چې د افغانستان د حکومت او ځېنو مجاهېد مشرانو او همدارنګه هغه افغان روڼ اڼدانو چې د افغان ناورین لپاره یې یوه سوله اییزه لاره لټوله. په همدې توګه منصور احمد د آی اېس آی وړانديز ته غاړه کېښودله او په پاکستان کې افغان حکومت د ايجنټانو په اړه د ارزښتمنو پټو مالوماتو په بدل کې، هغه د خپلې کورنۍ د ټولو غړو سره په پټه توګه د استوګنې د ځای نه ووېستل شول چې بيا د برټش ايروېز په آلوتنه کې په خوندي توګه تر لندنه ورسول شول. د هغه وخت افغاني ډيپلوماټانو او د شوروي اتحاد چارواکو ډېر ځل خپل کوششونه وکړل چې منصور احمد او د هغه کورنۍ پېدا کړي خو د هغوی هر کوشش ناکامه و.<ref name="Profiles of Intelligence">{{cite book | author=Brigadier Syed A. I. Tirmazi | title=Profiles of Intelligence | publisher=Combined Printers | year=۱۹۸۵ | id=Library of Congress Catalogue No. ۹۵-۹۳۰۴۵۵}}</ref> 
 
-*'''(1989)''' ISI was unable to induce the [[Afghan mujahideen#Mujahideen of Afghanistan|Afghan mujahideen]] - to whom it had provided large sums of funding during its fight with Marxist forces during the 1980s - to cooperate and unite following the withdrawal of the [[Soviet Union]] from Pakistan's neighbor Afghanistan in 1989. The [[Civil war in Afghanistan (1989-1992)|war against the Marxist government]] and [[Civil war in Afghanistan (1992-1996)|civil war between the Mujahideen]] that followed killed many thousands and caused enormous destruction. 
+*'''(۱۹۸۹)''' ISI was unable to induce the [[Afghan mujahideen#Mujahideen of Afghanistan|Afghan mujahideen]] - to whom it had provided large sums of funding during its fight with Marxist forces during the ۱۹۸۰s - to cooperate and unite following the withdrawal of the [[Soviet Union]] from Pakistan's neighbor Afghanistan in ۱۹۸۹. The [[Civil war in Afghanistan (۱۹۸۹-۱۹۹۲)|war against the Marxist government]] and [[Civil war in Afghanistan (۱۹۹۲-۱۹۹۶)|civil war between the Mujahideen]] that followed killed many thousands and caused enormous destruction. 
 
-*'''(1992)''' ISI engineered the takeover of Afghanistan by the hard-line Islamic [[Taliban]] regime after the fall of the Communist government in Kabul in 1992.
+*'''(۱۹۹۲)''' ISI engineered the takeover of Afghanistan by the hard-line Islamic [[Taliban]] regime after the fall of the Communist government in Kabul in ۱۹۹۲.
 
-*'''(1994)''' The Taliban regime that the ISI supported after 1994 to suppress warlord fighting and in hopes of bringing stability to Afghanistan proved [[Taliban#Life under the Taliban regime|too rigid]] in its Islamic interpretations and too fond of the [[Al-Qaeda]] based on its soil. Despite receiving large sums of aid from Pakistan, the Taliban leader [[Mohammed Omar|Mullah Omar]] is reported to have insulted a visiting delegation of Saudi Prince Sultan and an ISI general asking that the Taliban turn over bin Laden to Saudi Arabia.<ref>Rashid, Ahmed, ''Taliban: Militant Islam, Oil, and Fundamentalism in Central Asia''. Yale University Press, (2000), p.138, 231 </ref> Following the 9/11 attack on the United States by Al-Qaeda, Pakistan felt it necessary to cooperate with the US and the [[United Islamic Front for the Salvation of Afghanistan|Northern Alliance]] in a [[War in Afghanistan (2001–present)|war]] against the Taliban.
+*'''(۱۹۹۴)''' The Taliban regime that the ISI supported after ۱۹۹۴ to suppress warlord fighting and in hopes of bringing stability to Afghanistan proved [[Taliban#Life under the Taliban regime|too rigid]] in its Islamic interpretations and too fond of the [[Al-Qaeda]] based on its soil. Despite receiving large sums of aid from Pakistan, the Taliban leader [[Mohammed Omar|Mullah Omar]] is reported to have insulted a visiting delegation of Saudi Prince Sultan and an ISI general asking that the Taliban turn over bin Laden to Saudi Arabia.<ref>Rashid, Ahmed, ''Taliban: Militant Islam, Oil, and Fundamentalism in Central Asia''. Yale University Press, (۲۰۰۰), p.۱۳۸, ۲۳۱ </ref> Following the ۹/۱۱ attack on the United States by Al-Qaeda, Pakistan felt it necessary to cooperate with the US and the [[United Islamic Front for the Salvation of Afghanistan|Northern Alliance]] in a [[War in Afghanistan (۲۰۰۱–present)|war]] against the Taliban.
 
-*'''(2001)''' ISI expels [[Hamid Karzai]] from his residence in exile in Pakistan for opposing the [[Taliban]].<ref>[[Ghost Wars]], p. 572</ref>
+*'''(۲۰۰۱)''' ISI expels [[Hamid Karzai]] from his residence in exile in Pakistan for opposing the [[Taliban]].<ref>[[Ghost Wars]], p. ۵۷۲</ref>
 
 ====بنګله دېش====
 *'''(1970s)''' آی اېس آی په دې چار کې پاتې راغی چې [[هندوستان]] د [[ختيځ پاکستان]] د ملاتړ څخه لاس په سر شي، کوم چې د [[بنګله دېش]] د جوړولو سبب وګرځېده.
