فارسی سازی ارقام

--- a/انټر_سرويس_انټېلېجنس.mw
+++ b/انټر_سرويس_انټېلېجنس.mw
@@ -162,7 +162,7 @@ After the initial phase, the recruit is sent to the Inter-Services Intelligence 
 *'''(۲۰۰۱)''' ISI expels [[Hamid Karzai]] from his residence in exile in Pakistan for opposing the [[Taliban]].<ref>[[Ghost Wars]], p. ۵۷۲</ref>
 
 ====بنګله دېش====
-*'''(1970s)''' آی اېس آی په دې چار کې پاتې راغی چې [[هندوستان]] د [[ختيځ پاکستان]] د ملاتړ څخه لاس په سر شي، کوم چې د [[بنګله دېش]] د جوړولو سبب وګرځېده.
+*'''(۱۹۷۰ کالونه)''' آی اېس آی په دې چار کې پاتې راغی چې [[هندوستان]] د [[ختيځ پاکستان]] د ملاتړ څخه لاس په سر شي، کوم چې د [[بنګله دېش]] د جوړولو سبب وګرځېده.
 
 ====هندوستان====
 *'''(1950s)''' The ISI's Covert Action Division was used in assisting the insurgents in [[India]]'s North-East.
