فارسی سازی ارقام

--- a/انټر_سرويس_انټېلېجنس.mw
+++ b/انټر_سرويس_انټېلېجنس.mw
@@ -188,12 +188,12 @@ Punjab]].<ref name="South Asia Analysis Group ">{{cite web| url=http://www.saag.
 
 ====پاکستان====
 
-*'''(1980)''' ISI became aware of a plot to assassinate the President of [[Pakistan]], Zia-ul-Haq and then launch a bloody coup to depose the current government and install an extreme Islamic government in its place. The attempted assassination and coup was to occur on [[March 23]], [[1980]] during the annual [[March 23]] Pakistan day parade. The masterminds behind the coup were high ranking Military and Intelligence officers and were led by Major General Tajammal Hussain Malik, his son, Captain Naveed and his nephew Major Riaz, a former Military Intelligence officer. ISI decided against arresting these men outright because they did not know how deep this conspiracy went and kept these men under strict surveillance. As the date of the annual parade approached, ISI was satisfied that it had identified the major players in this conspiracy and then arrested these men along with quite a few high ranking military officers.<ref name="Profiles of Intelligence">{{cite book | author=Brigadier Syed A. I. Tirmazi | title=Profiles of Intelligence | publisher=Combined Printers | year=1985 | id=Library of Congress Catalogue No. 95-930455}}
+*'''(۱۹۸۰)''' ISI became aware of a plot to assassinate the President of [[Pakistan]], Zia-ul-Haq and then launch a bloody coup to depose the current government and install an extreme Islamic government in its place. The attempted assassination and coup was to occur on [[March ۲۳]], [[۱۹۸۰]] during the annual [[March ۲۳]] Pakistan day parade. The masterminds behind the coup were high ranking Military and Intelligence officers and were led by Major General Tajammal Hussain Malik, his son, Captain Naveed and his nephew Major Riaz, a former Military Intelligence officer. ISI decided against arresting these men outright because they did not know how deep this conspiracy went and kept these men under strict surveillance. As the date of the annual parade approached, ISI was satisfied that it had identified the major players in this conspiracy and then arrested these men along with quite a few high ranking military officers.<ref name="Profiles of Intelligence">{{cite book | author=Brigadier Syed A. I. Tirmazi | title=Profiles of Intelligence | publisher=Combined Printers | year=۱۹۸۵ | id=Library of Congress Catalogue No. ۹۵-۹۳۰۴۵۵}}
 
 ====ليبيا====
-*'''(1978)''' ISI decided to spy on the residence of Colonel Hussain Imam Mabruk who was a Military Attaché to the Embassy of [[Libya]] in [[Islamabad]] as he had made some inflammatory statements towards the military regime of Zia-ul-Haq. The spying paid off as he was seen talking with two Pakistani gentlemen who entered and left the compound suspiciously.  The ISI monitored the two men and were later identified as Pakistani exiles that hated the current military regime and were Bhutto loyalists. They had received terrorist training in Libya and were ready to embark on a terrorist campaign in Pakistan to force the Army to step down from power. All members of the conspiracy were apprehended before any damage could be done.<ref name="Profiles of Intelligence">{{cite book | author=Brigadier Syed A. I. Tirmazi | title=Profiles of Intelligence | publisher=Combined Printers | year=1985 | id=Library of Congress Catalogue No. 95-930455}}</ref>
+*'''(۱۹۷۸)''' ISI decided to spy on the residence of Colonel Hussain Imam Mabruk who was a Military Attaché to the Embassy of [[Libya]] in [[Islamabad]] as he had made some inflammatory statements towards the military regime of Zia-ul-Haq. The spying paid off as he was seen talking with two Pakistani gentlemen who entered and left the compound suspiciously.  The ISI monitored the two men and were later identified as Pakistani exiles that hated the current military regime and were Bhutto loyalists. They had received terrorist training in Libya and were ready to embark on a terrorist campaign in Pakistan to force the Army to step down from power. All members of the conspiracy were apprehended before any damage could be done.<ref name="Profiles of Intelligence">{{cite book | author=Brigadier Syed A. I. Tirmazi | title=Profiles of Intelligence | publisher=Combined Printers | year=۱۹۸۵ | id=Library of Congress Catalogue No. ۹۵-۹۳۰۴۵۵}}</ref>
 
-*'''(1981)''' In 1981, a Libyan Security company called Al Murtaza Associates sent recruiters to Pakistan to entice former soldiers and servicemen for high paying security jobs in Libya. In reality, Libya was recruiting mercenaries to fight with [[Chad]] and [[Egypt]] as it had border disputes with both nations. Only later did the ISI become aware of the plot and the whole scheme was stopped, but nearly 2,700 Pakistanis had already left for those jobs.<ref name="Profiles of Intelligence">{{cite book | author=Brigadier Syed A. I. Tirmazi | title=Profiles of Intelligence | publisher=Combined Printers | year=1985 | id=Library of Congress Catalogue No. 95-930455}}</ref>
+*'''(۱۹۸۱)''' In ۱۹۸۱, a Libyan Security company called Al Murtaza Associates sent recruiters to Pakistan to entice former soldiers and servicemen for high paying security jobs in Libya. In reality, Libya was recruiting mercenaries to fight with [[Chad]] and [[Egypt]] as it had border disputes with both nations. Only later did the ISI become aware of the plot and the whole scheme was stopped, but nearly ۲٬۷۰۰ Pakistanis had already left for those jobs.<ref name="Profiles of Intelligence">{{cite book | author=Brigadier Syed A. I. Tirmazi | title=Profiles of Intelligence | publisher=Combined Printers | year=۱۹۸۵ | id=Library of Congress Catalogue No. ۹۵-۹۳۰۴۵۵}}</ref>
 
 ====ايران====
 {{see also|CIA activities in the Near East, North Africa, South and Southwest Asia#Iran 1980}}
